fixed underlined card text and changed scrollbar colors

--- a/front/src/styles/Discover.css
+++ b/front/src/styles/Discover.css
@@ -115,6 +115,12 @@
   margin-top: 1rem;
   text-align: left;
   width: 100%;
+  text-decoration: none;
+}
+
+.discover-card-link {
+  text-decoration: none;
+  color: inherit;
 }
 
 .discover-profile-picture-wrapper {
@@ -141,7 +147,7 @@
   overflow-y: auto;
   padding: 2rem;
   scrollbar-width: thin;
-  scrollbar-color: #C9184A #2b2f3b;
+  scrollbar-color: #323949 #2b2f3b;
 }
 
 /* WebKit (Chrome) styling */
@@ -154,11 +160,11 @@
   border-radius: 8px;
 }
 
-.scrollable-content::-webkit-scrollbar-thumb {
+/* .scrollable-content::-webkit-scrollbar-thumb {
   background: #C9184A;
   border-radius: 8px;
-}
+} */
 
-.scrollable-content::-webkit-scrollbar-thumb:hover {
+/* .scrollable-content::-webkit-scrollbar-thumb:hover {
   background: #ff3366;
-}
+} */
